5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1601_1802.log
== TEST (2019-04-03 18:48:45) 
-- CODE:
import math as m

inicial_HP = int(input("pontos de vida inicial"))
D1 = int(input("qual o valor sorteado no primeiro dado?"))
D2 = int(input("qual o valor sorteado do segundo dado?"))
dano = m.sqrt(5*D1) + (m.pi**(D2/3))

atual_HP = incial_HP - dano
print(int(atual_HP+1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    atual_HP = incial_HP - dano
NameError: name 'incial_HP' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:49:39) 
-- CODE:
import math as m

inicial_HP = int(input("pontos de vida inicial"))
D1 = int(input("qual o valor sorteado no primeiro dado?"))
D2 = int(input("qual o valor sorteado do segundo dado?"))
dano = m.sqrt(5*D1)+(m.pi**(D2/3))

atual_HP = incial_HP - dano
print(int(atual_HP+1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    atual_HP = incial_HP - dano
NameError: name 'incial_HP' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:50:57) 
-- CODE:
import math as m

inicial_HP = int(input("Pontos de vida inicial?"))
D1 = int(input("Qual o valor sorteado no primeiro dado?"))
D2 = int(input("Qual o valor sorteado do segundo dado?"))
dano = m.sqrt(5*D1)+(m.pi**(D2/3))

atual_HP = incial_HP - dano
print(int(atual_HP+1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    atual_HP = incial_HP - dano
NameError: name 'incial_HP' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:51:38) 
-- CODE:
import math as m

inicial_HP = int(input("Pontos de vida inicial?"))
D1 = int(input("Qual o valor sorteado no primeiro dado?"))
D2 = int(input("Qual o valor sorteado do segundo dado?"))
dano = m.sqrt(5*D1)+(m.pi**(D2/3))
atual_HP = incial_HP - dano
print(int(atual_HP+1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    atual_HP = incial_HP - dano
NameError: name 'incial_HP' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:52:12) 
-- CODE:
import math as m

inicial_HP = int(input("Pontos de vida inicial?"))
D1 = int(input("Qual o valor sorteado no primeiro dado?"))
D2 = int(input("Qual o valor sorteado do segundo dado?"))
dano = m.sqrt(5*D1)+(m.pi**(D2/3))
atual_HP = inicial_HP - dano
print(int(atual_HP+1))
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:52:33) 
-- CODE:
import math as m

inicial_HP = int(input("Pontos de vida inicial?"))
D1 = int(input("Qual o valor sorteado no primeiro dado?"))
D2 = int(input("Qual o valor sorteado do segundo dado?"))
dano = m.sqrt(5*D1)+(m.pi**(D2/3))
atual_HP = inicial_HP - dano
print(int(atual_HP+1))
-- EXECUTION TIME:
0.204388
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
